# AI-Agents

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  error.txt  pyproject.toml
src/: __main__.py  config.py  dto.py
src/agents/: __init__.py
src/agents/_gemini/: assistants.py  tools.py  utils.py
src/agents/_gigachat/: assistants.py  assistants_clean.py  tools.py  utils.py
src/core/: intrfaces.py  logger.py
src/dao/: mail.py
src/static/: index.html  index1.html
testing/: test_utils.py
